--- a/Client/chatUI.ui
+++ b/Client/chatUI.ui
@@ -59,19 +59,6 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QLabel" name="memberListLabel">
-        <property name="font">
-         <font>
-          <pointsize>12</pointsize>
-          <fontweight>DemiBold</fontweight>
-         </font>
-        </property>
-        <property name="text">
-         <string>Member List</string>
-        </property>
-       </widget>
-      </item>
       <item row="4" column="1">
        <widget class="QListWidget" name="sharedFileList">
         <property name="maximumSize">
@@ -84,24 +71,6 @@
          <font>
           <pointsize>12</pointsize>
           <bold>false</bold>
-         </font>
-        </property>
-        <property name="editTriggers">
-         <set>QAbstractItemView::NoEditTriggers</set>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="1">
-       <widget class="QListWidget" name="attachedFileList">
-        <property name="maximumSize">
-         <size>
-          <width>320</width>
-          <height>100</height>
-         </size>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>12</pointsize>
          </font>
         </property>
         <property name="editTriggers">
@@ -127,7 +96,7 @@
         <property name="maximumSize">
          <size>
           <width>320</width>
-          <height>140</height>
+          <height>120</height>
          </size>
         </property>
         <property name="font">
@@ -149,6 +118,37 @@
         </property>
         <property name="readOnly">
          <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="1" rowspan="2">
+       <widget class="QListWidget" name="attachedFileList">
+        <property name="maximumSize">
+         <size>
+          <width>320</width>
+          <height>120</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="editTriggers">
+         <set>QAbstractItemView::NoEditTriggers</set>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" rowspan="2">
+       <widget class="QLabel" name="memberListLabel">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+          <fontweight>DemiBold</fontweight>
+         </font>
+        </property>
+        <property name="text">
+         <string>Member List</string>
         </property>
        </widget>
       </item>
